spade-tests/src/snapshots/spade_tests__ast_lowering__stage_index_overflow.snap
---
source: spade-tests/src/ast_lowering.rs
---
pipeline(3) main(x: int<8>) -> int<8> {
    reg;
    reg;
    reg;
        stage(+1).x
}


error: Reference to pipeline stage beyond pipeline depth
  ┌─ testinput:5:9
  │
5 │         stage(+1).x
  │         ^^^^^^^^^ This references a pipeline stage beyond the pipeline depth
  │
  = note: Since this is at stage 3, stage(+1) references stage 4
  = note: The pipeline has depth 3


